Fixed issues with the UI resulting in inconsistencies. Fixed issue of images not showing up. Fixed issue of date formatting running into errors.

--- a/public/css/productions/add.css
+++ b/public/css/productions/add.css
@@ -32,7 +32,7 @@ input[type="file"]::file-selector-button {
 	display:block;
 }
 label[ for = "production-dates"]::after {
-	content: "[Month Day - Hour am/pm : production details; Month...]";
+	content: "[Month Day - Hour am/pm, production details; Month...]";
 	position: absolute;
 	display: block;
 	right:0rem;
